[tool.poetry]
name = "pubmed-fetcher"
version = "1.0.0"  # Corrected version format
description = "Fetch and filter research papers from PubMed"
authors = ["binni-baddy <himabindhu796@gmail.com>"]


[tool.poetry.dependencies]
python = "^3.10" # Moved requires-python here
requests = "^2.28.0"
pandas = "^1.4.0"
typer = {extras = ["all"], version = "^0.9.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-cov = "^4.0.0"
requests-mock = "^1.10.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

